# stravatools

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
stravatools/: csv_totals.py  get_week.py  gridplot.py  strava_find.py  summary.py  weeks.py
